update performer audit task

--- a/plugins/userscript_functions/userscript_functions.yml
+++ b/plugins/userscript_functions/userscript_functions.yml
@@ -24,3 +24,7 @@ tasks:
       studio_id: null
       endpoint: null
       remote_site_id: null
+  - name: Audit performer urls
+    description: Audit performer IAFD urls for dupes
+    defaultArgs:
+      name: audit_performer_urls
